--- a/testimonial-grid/style.css
+++ b/testimonial-grid/style.css
@@ -1,33 +1,163 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,300;0,700;0,400;1,500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    padding: 4.5rem;
+    height: 100%;
+}
+
 .grid-main {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "grid1 grid1 grid2 grid3"
+                         "grid4 grid5 grid5 grid3";
     gap: 2rem;
+    width: 1200px;
+    min-width: 1200px;
+    height: 700px;
 }
 
-.grid1 {
-    background-color: #7541c9;
+.user {
+    display: flex;
+    align-items: center;
+}
+
+.light-text img {
+    width: 2.4rem;
+    border-radius: 50%;
+    border: .2rem solid rgb(179, 178, 178);
+    margin-right: 1rem;
+}
+
+.dark-text img {
+    width: 2.4rem;
+    border-radius: 50%;
+    border: .2rem solid rgb(59, 59, 59);
+    margin-right: 1rem;
+}
+
+.grid1,
+.grid2,
+.grid3,
+.grid4,
+.grid5 {
+    padding: 2.1rem;
     border-radius: .5rem;
 }
 
+.light-text h2 {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding-bottom: .5rem;
+}
+
+.light-text h3 {
+    color: rgba(255,255,255,0.5);
+    font-weight: 400;
+    font-size: 0.75rem;
+}
+
+.light-text p {
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.75rem;
+    padding: 1rem 0;
+}
+
+.light-text__quote {
+    color: rgba(255,255,255,0.7);
+    font-size: 0.8rem;
+    line-height: 1.25rem;
+}
+
+.dark-text h2 {
+    color: #48556a;
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding-bottom: .5rem;
+
+}
+
+.dark-text h3 {
+    color: rgba(72,85,106,0.5);
+    font-weight: 400;
+    font-size: 0.7rem;
+}
+
+.dark-text p {
+    color: #48556a;
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 1.75rem;
+    padding: 1rem 0;
+}
+
+.dark-text__quote {
+    color: rgba(72,85,106,0.5);
+    font-size: 0.8rem;
+    line-height: 1.25rem;
+}
+
+.grid1 {
+    grid-area: grid1;
+    background-color: #7541c9;
+}
+
 .grid2 {
+    grid-area: grid2;
     background-color: #49556b;
 }
 
 .grid3 {
+    grid-area: grid3;
     background-color: #edf2f8;
 }
 
 .grid4 {
+    grid-area: grid4;
     background-color: #edf2f8;
 }
 
 .grid5 {
+    grid-area: grid5;
     background-color: #19212e;
 }
+
+footer {
+    position: relative;
+    margin-top: 2%;
+    height: 50;
+    width: 100%;
+    text-align: center;
+    font-size: 0.8em;
+    bottom: 1rem;
+  }
+
+@media only screen and (max-width: 1200px) {
+
+    main{
+        display: flex;
+        font-family: 'Barlow Semi Condensed', sans-serif;
+        padding: 3rem;
+    }
+    
+    .grid-main {
+        display: flex;
+        flex-direction: column;
+        height: 90%;
+        min-width: 80%;
+        max-width: 40rem;
+    }
+}   
