--- a/testimonial-grid/style.css
+++ b/testimonial-grid/style.css
@@ -11,7 +11,7 @@ main{
     justify-content: center;
     align-items: center;
     font-family: 'Barlow Semi Condensed', sans-serif;
-    padding: 4.5rem;
+    height: 100vh;
 }
 
 .grid-main {
@@ -150,6 +150,7 @@ footer {
         display: flex;
         font-family: 'Barlow Semi Condensed', sans-serif;
         padding: 2rem;
+        height: auto;
     }
     
     .grid-main {
